# autotools-hello

./: .gitignore  README.md  configure.ac
src/: Makefile.am  main.c
